# can-send-receiver

./: README.md
TAMASTER_RECEIVER/: CMakeLists.txt  can_receiver.cpp  can_receiver.h  compile.sh  main.cpp
TAMASTER_SEND/: CMakeLists.txt  compile.sh  main.cpp  toolchain-aarch64.cmake
